--- a/mwe.tex
+++ b/mwe.tex
@@ -8,9 +8,7 @@
 Qty &Apr &May &Jun &Jul \\
 \midrule
 Qty &100 &200 &300.2 &-256.00 \\
-Usage &100 &200 &300.2 &-256.00 \\
-Usage &100 &200 &300.2 &-256.00 \\
-Usage &100 &200 &300.2 &-256.00\footnotemark\footnotetext{This is a footnote} \\
+Usage &100 &200 &300.2 &-256.00\footnote{This is a footnote} \\
 \bottomrule
 \end{tabular}
 \caption{This is the caption of the table.}
